# chat-reconstructor

./: Cargo.toml  README.md  TODO.md  test_data.txt
reconstructed_project/: Cargo.toml  ImplementationCargo.toml  README.md
reconstructed_project/docs/: configuration.md
reconstructed_project/src/: lib.rs
reconstructed_project/src/app/: app.rs  mod.rs  settings.rs
reconstructed_project/src/audio/: mod.rs  player.rs  playlist.rs
reconstructed_project/src/config/: config.rs
reconstructed_project/src/ui/: controls.rs  main_window.rs  mod.rs  playlist_view.rs  settings_window.rs
reconstructed_project/src/visualization/: mod.rs  projectm_wrapper.rs  text_overlay.rs
src/: file_ops.rs  main.rs  parser.rs
tests/: chat-export-1754400135256.json  sample-chat-session-data_chat_VibeStream_Audio_player.txt
