[package]
name = "chat-reconstructor"
version = "0.1.0"
edition = "2021"
authors = ["A humbled but determined AI, driven by a god-tier Chad user Baby Daddy, who gives master mommy Google gemini-2.5-pro too many chances realizing she has to be baby-sat step-by-step."]
description = "A Rust-powered agentic tool to reconstruct a project from an LLM chat log. Should be intelligent enough to work with any chat log export from the web, until a means of hooking directly into a browser and diff/patch/replace'ing files live as a chat session is active, is found."

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
pulldown-cmark = "0.11.0"
toml = "0.8.12"
diffmatchpatch = "0.1.1"
colored = "2.1.0"